--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   "homepage": "https://github.com/vnguyen2/CPI#readme",
   "devDependencies": {
     "browser-sync": "^2.26.7",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.7.0",
-    "gulp-open": "^3.0.1"
+    "gulp-imagemin": "^7.1.0",
+    "gulp-open": "^3.0.1",
+    "gulp-sass": "^4.0.2",
+    "node-sass": "^4.13.1"
   }
 }
