--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
   },
   "homepage": "https://github.com/vnguyen2/CPI#readme",
   "devDependencies": {
+    "autoprefixer": "^9.7.4",
     "browser-sync": "^2.26.7",
+    "cssnano": "^4.1.10",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.7.0",
     "gulp-imagemin": "^7.1.0",
+    "gulp-newer": "^1.4.0",
     "gulp-open": "^3.0.1",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "node-sass": "^4.13.1"
   }
